--- a/Verslag/SELMA.tex
+++ b/Verslag/SELMA.tex
@@ -16,17 +16,17 @@ Box Calslaan xx-30}
 \begin{document}
 
 \lstdefinestyle{ANTLR}
-	{frame=single, breaklines=true,basicstyle=\footnotesize}
+	{frame=shadowbox, breaklines=true,basicstyle=\footnotesize}
 \lstdefinestyle{SELMA}
-	{frame=single, breaklines=true,basicstyle=\small}
+	{frame=shadowbox, breaklines=true,basicstyle=\small}
 \lstdefinestyle{ANTLRfile}
-	{breaklines=true, basicstyle=\scriptsize, numbers=left, stepnumber=5, firstnumber=1, numberstyle=\tiny}	
+	{frame=LB, breaklines=true, basicstyle=\scriptsize, numbers=left, stepnumber=5, firstnumber=1, numberstyle=\tiny}	
 \lstdefinestyle{SELMAfile}
-	{breaklines=true, basicstyle=\scriptsize, numbers=left, stepnumber=5, firstnumber=1, numberstyle=\tiny}	
+	{frame=LB, breaklines=true, basicstyle=\scriptsize, numbers=left, stepnumber=5, firstnumber=1, numberstyle=\tiny}	
 \lstdefinestyle{JAVAfile}
-	{language=Java, breaklines=true, numbers=left, stepnumber=5, firstnumber=1, numberstyle=\tiny}	
+	{frame=LB, language=Java, breaklines=true, numbers=left, stepnumber=5, firstnumber=1, numberstyle=\tiny}	
 \lstdefinestyle{JVMfile}
-	{breaklines=true, numbers=left, stepnumber=5, firstnumber=1, numberstyle=\tiny}	
+	{frame=LB, breaklines=true, numbers=left, stepnumber=5, firstnumber=1, numberstyle=\tiny}	
 
 \begin{titlepage}
 \maketitle 
@@ -164,15 +164,7 @@ foo := bar := 7*6;
 De Of-operator is de laagste operator in het rijtje, vandaar dat deze bovenin de structuur zit.
 \\
 NB: expr\_al1 staat voor "expression arithmetic level 1"
-\begin{lstlisting}[style=ANTLR]
-expr_arithmetic
-	: expr_al1
-	;
-
-	expr_al1
-		: expr_al2 (OR^ expr_al2)*
-		;
-\end{lstlisting}
+\lstinputlisting[style=ANTLR,linerange={139-145}]{../g-files/SELMA.g}
 \subsubsection{Context}
 \begin{list}{•}{•}
 \item Als expr\_al1 enkel uit 1 expr\_al2 bestaat dan zijn er geen restricties
@@ -194,11 +186,7 @@ true OR false OR foo;
 Hier wordt de AND-expressie beschreven. Net zoals bij de OR-expressie is het mogelijk nul tot veel AND-operatoren achter elkaar te plakken. De AND-expressie is een niveau hoger dan de OR-expressie en zal dus eerder worden uitgevoerd. \\
 Het is eventueel mogelijk later in de compiler om een AND eerder af te breken aangezien als er een false in het rijtje zit het resultaat altijd false is. Wij hebben deze optimalisatie er nog niet inzitten, dit omdat sommige expressies ongeacht de eerdere expressies uitgevoerd dienen te worden, denk bijvoorbeeld aan een READ()-statement dat anders niet uitgevoerd zou worden.
 \subsubsection{Syntax}
-\begin{lstlisting}[style=ANTLR]
-	expr_al2
-		: expr_al3 (AND^ expr_al3)*
-		;
-\end{lstlisting}
+\lstinputlisting[style=ANTLR,linerange={147-149}]{../g-files/SELMA.g}
 \subsubsection{Context}
 \begin{list}{•}{•}
 \item Als expr\_al2 enkel uit 1 expr\_al3 bestaat dan zijn er geen restricties
@@ -219,12 +207,7 @@ foo AND false AND bar;
 Hier worden bijna alle comperatoren afgehandeld. Het is belangrijk dat er in de checker goed wordt gekeken of de types van de linker en rechterzijde compatible zijn.
 \subsubsection{Syntax}
 %		: expr_al4 ((RELS|RELSE|RELG|RELGE|RELE|RELNE)^ expr_al4)*
-\begin{lstlisting}[style=ANTLR]
-	expr_al3
-		: expr_al4 ((RELS|RELSE|RELG|
-			RELGE|RELE|RELNE)^ expr_al4)*
-		;
-\end{lstlisting}
+\lstinputlisting[style=ANTLR,linerange={151-153}]{../g-files/SELMA.g}
 \subsubsection{Context}
 \begin{list}{•}{•}
 \item alle expr\_al4 dienen van hetzelfde type te zijn
@@ -244,11 +227,7 @@ true == false;
 \subsection{Expressies - plus en minus}
 Hier zijn we aangeland bij de eerder genoemde 6+3*12, plus en minus zit 1 niveau lager dan de vermenigvuldigingen.
 \subsubsection{Syntax}
-\begin{lstlisting}[style=ANTLR]
-	expr_al4
-		: expr_al5 ((PLUS|MINUS)^ expr_al5)*
-		;
-\end{lstlisting}
+\lstinputlisting[style=ANTLR,linerange={155-157}]{../g-files/SELMA.g}
 \subsubsection{Context}
 \begin{list}{•}{•}
 \item als er minimaal 1 operatie wordt uitgevoerd dan dient expr\_al5 een integer te zijn
@@ -268,11 +247,7 @@ foo := 5 + 37;
 Naast delen en vermenigvuldigen is het ook mogelijk een modulus te nemen.
 Wat wellicht is opgevallen bij het bovenstaande, is dat het mogelijk is om enkel een som in de code te zetten. Dit vinden wij prima, echter moet daarbij wel de resulterende waarde gepopped worden als die niet meer gebruikt wordt.
 \subsubsection{Syntax}
-\begin{lstlisting}[style=ANTLR]
-	expr_al5
-		: expr_al6 ((MULT|DIV|MOD)^ expr_al6)*
-		;
-\end{lstlisting}
+\lstinputlisting[style=ANTLR,linerange={159-161}]{../g-files/SELMA.g}
 \subsubsection{Context}
 \begin{list}{•}{•}
 \item als er minimaal 1 operatie wordt uitgevoerd dan dient expr\_al6 een integer te zijn
@@ -294,17 +269,7 @@ Hier wordt gekeken of de expressie eventueel een NOT-, PLUS- of MIN-operator voo
 Om later verwarring te voorkomen zullen PLUS en MIN vervangen worden door speciale terminals, zijnde UMIN en UPLUS. UPLUS zou eventueel weg kunnen worden gelaten aangezien +x==x.
 Als er geen operator voor de expressie staat dan is expr\_al6 gewoon een expr\_al7
 \subsubsection{Syntax}
-\begin{lstlisting}[style=ANTLR]
-	expr_al6
-//		: (PLUS|MINUS|NOT)? expr_al7
-		: PLUS expr_al7
-			-> UPLUS expr_al7
-		| MINUS expr_al7
-			-> UMIN expr_al7
-		| NOT expr_al7
-		| expr_al7
-		;
-\end{lstlisting}
+\lstinputlisting[style=ANTLR,linerange={163-171}]{../g-files/SELMA.g}
 \subsubsection{Context}
 \begin{list}{•}{•}
 \item expr\_al7 dient bij PLUS expr\_al7 een integer te zijn
@@ -327,19 +292,7 @@ foo := not foobar;
 Op het hoogste nivau kan een expressie bestaan uit een semi-statement zoals een if-expressie of een print-expressie, of het kan een identifier of waarde zijn, of het kan een aparte (compound)expressie binnen haken zijn.
 Zoals je ziet stond in eerste de assignment hier. Maar aangezien het meest linkerdeel van een assignment een identiefier is kan op L=1 geen onderscheid worden gemaakt tussen identifier of een assignment. Vandaar dat een assignment bij expr\_al1 is gedefineerd.
 \subsubsection{Syntax}
-\begin{lstlisting}[style=ANTLR]
-	expr_al7
-		: unsignedConstant
-		| identifier
-//		| expr_assignment  //can be identifier
-		| expr_read
-		| expr_print
-		| expr_if
-		| expr_while
-		| expr_closedcompound
-		| expr_closed
-		;
-\end{lstlisting}
+\lstinputlisting[style=ANTLR,linerange={173-183}]{../g-files/SELMA.g}
 \subsubsection{Context}
 \begin{list}{•}{•}
 \item expr\_al7 is van hetzelfde type als de gegeven expressie of waarde.
@@ -353,13 +306,134 @@ foo;
 (foobar);
 \end{lstlisting}
 
+\subsection{Unsigned constants}
+
+\subsubsection{Syntax}
+Uiteraard bied onze taal ook de mogelijkheid aan om constanten te gebruiken zonder deze eerst te moeten declareren. Oftewel, je kunt gewoon nummers gebruiken bijvoorbeeld.
+\lstinputlisting[style=ANTLR,linerange={209-225}]{../g-files/SELMA.g}
+\subsubsection{Context}
+\begin{list}{•}{•}
+\item unsignedconstant is van het type van de gegeven waarde
+\item boolval is een boolean type
+\item charval is een char
+\item intval is een integer
+\end{list}
+\subsubsection{Semantiek}
+De desbetreffende waarde wordt op de stack gezet.
+\subsubsection{Voorbeeld}
+\begin{lstlisting}[style=SELMA]
+'Y';
+42;
+true;
+\end{lstlisting}
+
+\subsection{Identifier}
+Een identifier van een bestaande variabele of constante in de huidige of een hogere scope.
+\subsubsection{Syntax}
+\lstinputlisting[style=ANTLR,linerange={227-229}]{../g-files/SELMA.g}
+\subsubsection{Context}
+\begin{list}{•}{•}
+\item De identifier dient te verwijzen naar een geldige variabele of constante
+\item Het type is het type van de variabele of declaratie waar de identifier naar verwijst.
+\end{list}
+\subsubsection{Semantiek}
+Er zal een commando aangeroepen worden om de waarde uit het geheugen te laden. Deze waarde wordt dan op de stack gezet. Bij constanten gebeurd dit ook. Eventueel zou je ook de constante zelf al kunnen neerzetten op de stack, dit scheelt weer wat werk voor de processor. Dit doen wij echter niet momenteel.
+\subsubsection{Voorbeeld}
+\begin{lstlisting}[style=SELMA]
+Answer42;
+\end{lstlisting}
+
+\subsection{Read}
+
+\subsubsection{Syntax}
+\lstinputlisting[style=ANTLR,linerange={185-187}]{../g-files/SELMA.g}
+\subsubsection{Context}
+\begin{list}{•}{•}
+\item
+\end{list}
+\subsubsection{Semantiek}
+
+\subsubsection{Voorbeeld}
+\begin{lstlisting}[style=SELMA]
+\end{lstlisting}
+
+%\subsection{Print}
+
+\subsubsection{Syntax}
+\lstinputlisting[style=ANTLR,linerange={189-191}]{../g-files/SELMA.g}
+\subsubsection{Context}
+\begin{list}{•}{•}
+\item
+\end{list}
+\subsubsection{Semantiek}
+
+\subsubsection{Voorbeeld}
+\begin{lstlisting}[style=SELMA]
+\end{lstlisting}
+
+%\subsection{If}
+
+\subsubsection{Syntax}
+\lstinputlisting[style=ANTLR,linerange={193-195}]{../g-files/SELMA.g}
+\subsubsection{Context}
+\begin{list}{•}{•}
+\item
+\end{list}
+\subsubsection{Semantiek}
+
+\subsubsection{Voorbeeld}
+\begin{lstlisting}[style=SELMA]
+\end{lstlisting}
+
+%\subsection{While}
+
+\subsubsection{Syntax}
+\lstinputlisting[style=ANTLR,linerange={197-199}]{../g-files/SELMA.g}
+\subsubsection{Context}
+\begin{list}{•}{•}
+\item
+\end{list}
+\subsubsection{Semantiek}
+
+\subsubsection{Voorbeeld}
+\begin{lstlisting}[style=SELMA]
+\end{lstlisting}
+
+%\subsection{Read}
+
+\subsubsection{Closed compoundexpression}
+\lstinputlisting[style=ANTLR,linerange={201-203}]{../g-files/SELMA.g}
+\subsubsection{Context}
+\begin{list}{•}{•}
+\item
+\end{list}
+\subsubsection{Semantiek}
+
+\subsubsection{Voorbeeld}
+\begin{lstlisting}[style=SELMA]
+\end{lstlisting}
+
+%\subsection{Closed expression}
+
+\subsubsection{Syntax}
+\lstinputlisting[style=ANTLR,linerange={205-207}]{../g-files/SELMA.g}
+\subsubsection{Context}
+\begin{list}{•}{•}
+\item
+\end{list}
+\subsubsection{Semantiek}
+
+\subsubsection{Voorbeeld}
+\begin{lstlisting}[style=SELMA]
+\end{lstlisting}
+
+
 %==================================OPMAAK======================================
 
 %\subsection{Expressies - }
 %
 %\subsubsection{Syntax}
-%\begin{lstlisting}[style=ANTLR]
-%\end{lstlisting}
+%\lstinputlisting[style=ANTLR,linerange={131-137}]{../g-files/SELMA.g}
 %\subsubsection{Context}
 %\begin{list}{•}{•}
 %\item
@@ -405,29 +479,6 @@ foo;
 %expr_closed
 %	: LPAREN! expression RPAREN!
 %	;
-%
-%unsignedConstant
-%	: boolval
-%	| charval
-%	| intval
-%	;
-%
-%intval
-%	: NUMBER
-%	;
-%
-%boolval
-%	: BOOLEAN
-%	;
-%
-%charval
-%	: CHARV
-%	;
-%
-%identifier
-%	: ID
-%	;
-
 
 
 \newpage
