--- a/Verslag/SELMA.tex
+++ b/Verslag/SELMA.tex
@@ -12,6 +12,16 @@ Box Calslaan xx-30}
 
 \usepackage{listings}
 \usepackage{lscape}
+\usepackage{color}
+\usepackage[pdftex,bookmarks=true]{hyperref}
+\usepackage{hyperref}
+\hypersetup{
+    colorlinks,
+    citecolor=black,
+    filecolor=black,
+    linkcolor=black,
+    urlcolor=black
+}
 
 \begin{document}
 
@@ -19,6 +29,8 @@ Box Calslaan xx-30}
 	{frame=shadowbox, breaklines=true,basicstyle=\footnotesize}
 \lstdefinestyle{SELMA}
 	{frame=shadowbox, breaklines=true,basicstyle=\small}
+\lstdefinestyle{JAVA}
+	{frame=shadowbox, language=Java, breaklines=true,basicstyle=\footnotesize}
 \lstdefinestyle{ANTLRfile}
 	{frame=LB, breaklines=true, basicstyle=\scriptsize, numbers=left, stepnumber=5, firstnumber=1, numberstyle=\tiny}	
 \lstdefinestyle{SELMAfile}
@@ -27,6 +39,10 @@ Box Calslaan xx-30}
 	{frame=LB, language=Java, breaklines=true, numbers=left, stepnumber=5, firstnumber=1, numberstyle=\tiny}	
 \lstdefinestyle{JVMfile}
 	{frame=LB, breaklines=true, numbers=left, stepnumber=5, firstnumber=1, numberstyle=\tiny}	
+
+\newcommand{\todo}[1]{\marginpar{\fcolorbox{red}{yellow}{\textbf{#1}}}}
+
+
 
 \begin{titlepage}
 \maketitle 
@@ -114,19 +130,25 @@ OR		'||';
 BECOMES		':=';
 \end{lstlisting}
 \newpage
-\subsection{Basis}
+
+\subsection{De basis - Programma}
 De basis van het programma geeft een aantal restricties op aan de taal.
 Allereerst is er het programma, dit bestaat uit een (zeer grote) compoundexpression waarna het programma stopt (End Of File). Deze wordt hier herschreven. Een compoundexpression is uiteindelijk opgebouwd uit een serie declaraties en statements, gescheiden door een semicolon. Hier is te zien dat het programma uit minimaal 1 expressie bestaat, dat declaraties en expressies door elkaar gebruikt mogen worden en dat het laatste statement in een programma altijd een expressie is.
 \lstinputlisting[style=ANTLR,linerange={90-101}]{../g-files/SELMA.g}
+
+\subsection{Expression\_statement}
+Dit is een speciale tussenstap voor de interne boekhouding. Na elke semicolumn zal de mogelijk resterende waarde van de stack worden gepopped. Dit maakt dat er niet aan het eind van ons programma een hoop troep op de stack staat. Voorwaarde is wel dat er wordt bijgehouden wanneer een expression van het type void is, dan hoeft er namelijk niet gepopped te worden.
+\lstinputlisting[style=ANTLR,linerange={125-127}]{../g-files/SELMA.g}
+
 \subsection{Declaraties en types}
 SELMA kent twee soorten declaraties, variabelen en constanten. SELMA staat toe om per declaratie meerdere identifiers te definieren. Bij de declaratie dien je het type van de te declareren waarde mee te geven. En bij een constante dien je uiteraard een waarde mee te geven.
 \subsubsection{Syntax}
 \lstinputlisting[style=ANTLR,linerange={105-118}]{../g-files/SELMA.g}
 \subsubsection{Context}
-\begin{list}{•}{•}
+\begin{itemize}
 \item Het gegeven type dient bij de constante overeen te komen met het type van de gegeven waarde.
 \item Identifiers mogen niet eerder gedeclareerd zijn, in de huidige of bovenliggende scope.
-\end{list}
+\end{itemize}
 \subsubsection{Semantiek}
 Er zal ruimte gereserveerd worden voor de variabele en het adres wordt onthouden. Voor een constante geldt hetzelfde behalve dat dan ook direct de desbetreffende waarde op dat adres wordt gezet. Op het moment dat elders in het programma een verwijzing is naar deze gedeclareerde dan zal deze variabele of constante geladen worden.
 \subsubsection{Voorbeeld}
@@ -142,13 +164,13 @@ Het hoogste niveau is de assignment.
 \subsubsection{Syntax}
 \lstinputlisting[style=ANTLR,linerange={131-137}]{../g-files/SELMA.g}
 \subsubsection{Context}
-\begin{list}{•}{•}
+\begin{itemize}
 \item expr\_arithmetic moet een identifier worden, in het eind, aangezien dat het enige is waaraan je een waarde kunt toekennen
 \item deze identiefier moet dan verwijzen naar een geldige variabele
 \item het type van expression en expression\_arithmetic moet hetzelfde zijn
 \item expression is van het type van expr\_assignment
 \item expr\_assignment is van het type van expr\_arithmetic 
-\end{list}
+\end{itemize}
 \subsubsection{Semantiek}
 De waarde van expression zal worden toegekend aan het linker deel van de assignment.
 Tevens gaat de waarde van de hele expressie op de stack, zo is er een asignement met meerdere identifiers mogelijk.
@@ -160,19 +182,19 @@ foo := bar := 7*6;
 \end{lstlisting}
 
 \subsection{Expressies - OR}
-\subsubsection{Syntax}
 De Of-operator is de laagste operator in het rijtje, vandaar dat deze bovenin de structuur zit.
 \\
 NB: expr\_al1 staat voor "expression arithmetic level 1"
+\subsubsection{Syntax}
 \lstinputlisting[style=ANTLR,linerange={139-145}]{../g-files/SELMA.g}
 \subsubsection{Context}
-\begin{list}{•}{•}
+\begin{itemize}
 \item Als expr\_al1 enkel uit 1 expr\_al2 bestaat dan zijn er geen restricties
 \item In de andere gevallen dienen alle expr\_al2 van het type boolean te zijn.
 \item het type van expr\_arithmetic is het type van expr\_al1
 \item als exp\_1 == expr\_al2 dan is het type van expr\_al1 het type van expr\_al2
 \item als exp\_1 != expr\_al2 dan is het type van expr\_al1 een boolean
-\end{list}
+\end{itemize}
 \subsubsection{Semantiek}
 De eerste expr\_al2 zal op de stack worden gezet. Hierna wordt er telkens een expr\_al2 erbij gezet. De OR-operatie zal worden aangeroepen en het resultaat blijft op de stack zijn. Als er nog een expr\_al2 is dan zal deze ook op de stack worden gezet en wordt de OR-operatie opnieuw aangeroepen. Aldoende blijft er uiteindelijk 1 waarde op de stack staan.
 \subsubsection{Voorbeeld}
@@ -188,12 +210,12 @@ Het is eventueel mogelijk later in de compiler om een AND eerder af te breken aa
 \subsubsection{Syntax}
 \lstinputlisting[style=ANTLR,linerange={147-149}]{../g-files/SELMA.g}
 \subsubsection{Context}
-\begin{list}{•}{•}
+\begin{itemize}
 \item Als expr\_al2 enkel uit 1 expr\_al3 bestaat dan zijn er geen restricties
 \item In de andere gevallen dienen alle expr\_al3 van het type boolean te zijn.
 \item als exp\_2 == expr\_al3 dan is het type van expr\_al2 het type van expr\_al3
 \item als exp\_2 != expr\_al3 dan is het type van expr\_al2 een boolean
-\end{list}
+\end{itemize}
 \subsubsection{Semantiek}
 Hetzelfde als bij het OR-statement. De waardes zullen op de stack geladen worden en er zal telkens een AND-operatie op 2 waardes worden uitgevoerd. De resulterende waarde is weer geschikt voor bijvoorbeeld nog een AND-operatie.
 \subsubsection{Voorbeeld}
@@ -209,12 +231,12 @@ Hier worden bijna alle comperatoren afgehandeld. Het is belangrijk dat er in de 
 %		: expr_al4 ((RELS|RELSE|RELG|RELGE|RELE|RELNE)^ expr_al4)*
 \lstinputlisting[style=ANTLR,linerange={151-153}]{../g-files/SELMA.g}
 \subsubsection{Context}
-\begin{list}{•}{•}
+\begin{itemize}
 \item alle expr\_al4 dienen van hetzelfde type te zijn
 \item bij een operatie tussen twee expr\_al4 anders dan RELE \& RELNE dient expr\_al4 een integer te zijn.
 \item als exp\_3 == expr\_al4 dan is het type van expr\_al3 het type van expr\_al4
 \item als exp\_3 != expr\_al4 dan is het type van expr\_al3 een boolean
-\end{list}
+\end{itemize}
 \subsubsection{Semantiek}
 Vergelijkbaar met andere binaire operatoren zoals AND en OR, er zullen waardes op de stack worden gezet en de operatie zal 1 waarde achterlaten op de stack.
 \subsubsection{Voorbeeld}
@@ -229,11 +251,11 @@ Hier zijn we aangeland bij de eerder genoemde 6+3*12, plus en minus zit 1 niveau
 \subsubsection{Syntax}
 \lstinputlisting[style=ANTLR,linerange={155-157}]{../g-files/SELMA.g}
 \subsubsection{Context}
-\begin{list}{•}{•}
+\begin{itemize}
 \item als er minimaal 1 operatie wordt uitgevoerd dan dient expr\_al5 een integer te zijn
 \item als exp\_4 == expr\_al5 dan is het type van expr\_al4 het type van expr\_al5
 \item als exp\_4 != expr\_al5 dan is het type van expr\_al4 een integer
-\end{list}
+\end{itemize}
 \subsubsection{Semantiek}
 Wederom een binaire operatie. Let op, de unaire plus en minus komen nog. Dus 5--6 zal de tweede minus niet hier worde opgevangen.
 \subsubsection{Voorbeeld}
@@ -249,11 +271,11 @@ Wat wellicht is opgevallen bij het bovenstaande, is dat het mogelijk is om enkel
 \subsubsection{Syntax}
 \lstinputlisting[style=ANTLR,linerange={159-161}]{../g-files/SELMA.g}
 \subsubsection{Context}
-\begin{list}{•}{•}
+\begin{itemize}
 \item als er minimaal 1 operatie wordt uitgevoerd dan dient expr\_al6 een integer te zijn
 \item als exp\_5 == expr\_al6 dan is het type van expr\_al5 het type van expr\_al6
 \item als exp\_5 != expr\_al6 dan is het type van expr\_al5 een integer
-\end{list}
+\end{itemize}
 \subsubsection{Semantiek}
 Hetzelfde als bij optellen. Goed om te weten is dat de geretouneerde waarde een integer is, dus er zal worden afgerond.
 \subsubsection{Voorbeeld}
@@ -271,16 +293,16 @@ Als er geen operator voor de expressie staat dan is expr\_al6 gewoon een expr\_a
 \subsubsection{Syntax}
 \lstinputlisting[style=ANTLR,linerange={163-171}]{../g-files/SELMA.g}
 \subsubsection{Context}
-\begin{list}{•}{•}
+\begin{itemize}
 \item expr\_al7 dient bij PLUS expr\_al7 een integer te zijn
 \item expr\_al7 dient bij MIN expr\_al7 een integer te zijn
 \item expr\_al7 dient bij NOT expr\_al7 een boolean te zijn
 \item het type van expr\_al6 het type van expr\_al7
-\end{list}
+\end{itemize}
 \subsubsection{Semantiek}
-Bij UMIN zal de waarde van expr\_7 op de stack worden gezet en de operatie worden aangeroepen om het teken om te flippen. \\
-Bij UPLUS gebeurd er niks, behalve dat de waarde van expr\_7 netjes op de stack komt.\\
-Bij NOT zal de waarde van expr\_7 worden geinverteerd, dus true wordt false en visa versa.
+Bij UMIN zal expr\_al6 == - expr\_al7 \\
+Bij UPLUS zal expr\_al6 == expr\_al7 \\
+Bij NOT zal expr\_al6 == ! expr\_al7 
 \subsubsection{Voorbeeld}
 \begin{lstlisting}[style=SELMA]
 one := +1;
@@ -294,9 +316,9 @@ Zoals je ziet stond in eerste de assignment hier. Maar aangezien het meest linke
 \subsubsection{Syntax}
 \lstinputlisting[style=ANTLR,linerange={173-183}]{../g-files/SELMA.g}
 \subsubsection{Context}
-\begin{list}{•}{•}
+\begin{itemize}
 \item expr\_al7 is van hetzelfde type als de gegeven expressie of waarde.
-\end{list}
+\end{itemize}
 \subsubsection{Semantiek}
 Dit is enkel een lijst van mogelijke expressies en waardes en dus zal er in de compiler enkel deze expressie of waarde op stack hebben staan, maar wordt er geen operatie op uitgevoerd.
 \subsubsection{Voorbeeld}
@@ -307,17 +329,16 @@ foo;
 \end{lstlisting}
 
 \subsection{Unsigned constants}
-
-\subsubsection{Syntax}
 Uiteraard bied onze taal ook de mogelijkheid aan om constanten te gebruiken zonder deze eerst te moeten declareren. Oftewel, je kunt gewoon nummers gebruiken bijvoorbeeld.
+\subsubsection{Syntax}
 \lstinputlisting[style=ANTLR,linerange={209-225}]{../g-files/SELMA.g}
 \subsubsection{Context}
-\begin{list}{•}{•}
+\begin{itemize}
 \item unsignedconstant is van het type van de gegeven waarde
 \item boolval is een boolean type
 \item charval is een char
 \item intval is een integer
-\end{list}
+\end{itemize}
 \subsubsection{Semantiek}
 De desbetreffende waarde wordt op de stack gezet.
 \subsubsection{Voorbeeld}
@@ -332,10 +353,10 @@ Een identifier van een bestaande variabele of constante in de huidige of een hog
 \subsubsection{Syntax}
 \lstinputlisting[style=ANTLR,linerange={227-229}]{../g-files/SELMA.g}
 \subsubsection{Context}
-\begin{list}{•}{•}
+\begin{itemize}
 \item De identifier dient te verwijzen naar een geldige variabele of constante
 \item Het type is het type van de variabele of declaratie waar de identifier naar verwijst.
-\end{list}
+\end{itemize}
 \subsubsection{Semantiek}
 Er zal een commando aangeroepen worden om de waarde uit het geheugen te laden. Deze waarde wordt dan op de stack gezet. Bij constanten gebeurd dit ook. Eventueel zou je ook de constante zelf al kunnen neerzetten op de stack, dit scheelt weer wat werk voor de processor. Dit doen wij echter niet momenteel.
 \subsubsection{Voorbeeld}
@@ -344,88 +365,125 @@ Answer42;
 \end{lstlisting}
 
 \subsection{Read}
-
+Om contact te hebben met de buitenwereld kan onze taal lezen en schrijven naar de standard-out. 
 \subsubsection{Syntax}
 \lstinputlisting[style=ANTLR,linerange={185-187}]{../g-files/SELMA.g}
 \subsubsection{Context}
-\begin{list}{•}{•}
-\item
-\end{list}
+\begin{itemize}
+\item Identifier dient te verwijzen naar een geldige identifier
+\item De ingelezen waarde dient van het zelfde type als identifier te zijn
+\item Als er 1 identifier is opgegeven dan geeft read de gelezen waarde/type terug
+\item Als er meer dan 1 identifier wordt ingelezen dan is het returntype void
+\end{itemize}
 \subsubsection{Semantiek}
-
+Het read-commando wordt aangeroepen en de waarde wordt van de standard-out gelezen en op de stack gezet. Vervolgens wordt die waarde opgeslagen in de variabele.
 \subsubsection{Voorbeeld}
 \begin{lstlisting}[style=SELMA]
+read(foo);
+read(foo,bar);
 \end{lstlisting}
 
-%\subsection{Print}
-
+\subsection{Print}
+De taal heeft ook de mogelijkheid om dat wat er bijvoorbeeld berekend is naar buiten te communiceren.
 \subsubsection{Syntax}
 \lstinputlisting[style=ANTLR,linerange={189-191}]{../g-files/SELMA.g}
 \subsubsection{Context}
-\begin{list}{•}{•}
-\item
-\end{list}
+\begin{itemize}
+\item -
+\end{itemize}
 \subsubsection{Semantiek}
-
+De waarde van de expressie staat op de stack. Vervolgens wordt deze netjes naar het scherm uitgevoerd. Afhankelijk van het type zal dat anders gebeuren. 
 \subsubsection{Voorbeeld}
 \begin{lstlisting}[style=SELMA]
+print(42);
+print('4','2');
 \end{lstlisting}
 
-%\subsection{If}
-
+\subsection{If}
+Om keuzes in het programma mogelijk te maken zal er een conditioneel statement nodig zijn, het IF-statement is een dergelijk statement. Een ELSE-deel is optioneel.
 \subsubsection{Syntax}
 \lstinputlisting[style=ANTLR,linerange={193-195}]{../g-files/SELMA.g}
 \subsubsection{Context}
-\begin{list}{•}{•}
-\item
-\end{list}
+\begin{itemize}
+\item De eerste compoundexpression moet een boolean-type retouneren
+\item De if retouneerd een type void
+\todo{retourtype}
+\end{itemize}
 \subsubsection{Semantiek}
-
+Als de waarde binnen het ifstatement waar is dan zal de eerste compoundexpressie worden uitgevoerd (na de then). Anders zal de andere compoundexpressie worden uitgevoerd, mits deze is gedeclareerd.
 \subsubsection{Voorbeeld}
 \begin{lstlisting}[style=SELMA]
+if true; then i := 42; fi
+if false; then i := 0; else i:=42; fi
 \end{lstlisting}
 
-%\subsection{While}
-
+\subsection{While}
+De while zal net zolang een blok code uitvoeren tot een gegeven expressie waar is.
 \subsubsection{Syntax}
 \lstinputlisting[style=ANTLR,linerange={197-199}]{../g-files/SELMA.g}
 \subsubsection{Context}
-\begin{list}{•}{•}
-\item
-\end{list}
+\begin{itemize}
+\item De eerste compoundexpression moet een boolean-type retouneren
+\item De while retouneerd een type void
+\end{itemize}
 \subsubsection{Semantiek}
-
+De tweede compoundexpression zal worden uitgevoerd tot de eerste compoundexpression waar is. Het kan zijn dat de tweede compoundexpression nooit wordt uitgevoerd dus.
 \subsubsection{Voorbeeld}
 \begin{lstlisting}[style=SELMA]
+while false; do 
+\\ this is not gonna be executed
+tru := false;
+od
+
+while foo<5; do
+foo := foo + 1;
+od
 \end{lstlisting}
 
-%\subsection{Read}
-
-\subsubsection{Closed compoundexpression}
-\lstinputlisting[style=ANTLR,linerange={201-203}]{../g-files/SELMA.g}
-\subsubsection{Context}
-\begin{list}{•}{•}
-\item
-\end{list}
-\subsubsection{Semantiek}
-
-\subsubsection{Voorbeeld}
-\begin{lstlisting}[style=SELMA]
-\end{lstlisting}
-
-%\subsection{Closed expression}
-
+\subsection{Closed expression}
+Een expressie tussen haakjes is soms handig, bijvoorbeeld bij sommetjes: (5+2)*6;
 \subsubsection{Syntax}
 \lstinputlisting[style=ANTLR,linerange={205-207}]{../g-files/SELMA.g}
 \subsubsection{Context}
-\begin{list}{•}{•}
-\item
-\end{list}
+\begin{itemize}
+\item De geretouneerde waarde zal de waarde van de expressie zijn binnen de haakjes.
+\item Het retourneerde type is ook hetzelfde als die van de expressie.
+\end{itemize}
 \subsubsection{Semantiek}
-
+De expressie binnen de haakjes zal worden uitgevoerd binnen de haakjes.
 \subsubsection{Voorbeeld}
 \begin{lstlisting}[style=SELMA]
+(3*(6+8))%102;
 \end{lstlisting}
+
+\subsection{Closed compoundexpression}
+Is een compoundexpressie binnen haakjes. Verschil met de expressie tussen haakjes is dat deze ook toestaat om declaraties te gebruiken. Een compound tussen haakjes zal een eigen scope hebben.
+\subsubsection{Syntax}
+\lstinputlisting[style=ANTLR,linerange={201-203}]{../g-files/SELMA.g}
+\subsubsection{Context}
+\begin{itemize}
+\item retouneerd het waarde en de type van de laatste expressie in de compound, dit kan van het type void zijn.
+\end{itemize}
+\subsubsection{Semantiek}
+De compoundexpressie zal in een eigen scope worden uitgevoerd.
+\subsubsection{Voorbeeld}
+\begin{lstlisting}[style=SELMA]
+{
+var foo: integer;
+foo := 40;
+foo+2;
+}
+\end{lstlisting}
+
+
+\todo{expression\_statement}
+
+%
+%expression_statement
+%	: expression SEMICOLON
+%		-> ^(EXPRESSION_STATEMENT expression)
+%	;
+%
 
 
 %==================================OPMAAK======================================
@@ -435,9 +493,9 @@ Answer42;
 %\subsubsection{Syntax}
 %\lstinputlisting[style=ANTLR,linerange={131-137}]{../g-files/SELMA.g}
 %\subsubsection{Context}
-%\begin{list}{•}{•}
+%\begin{itemize}
 %\item
-%\end{list}
+%\end{itemize}
 %\subsubsection{Semantiek}
 %
 %\subsubsection{Voorbeeld}
@@ -445,41 +503,6 @@ Answer42;
 %\end{lstlisting}
 
 %==================================OPMAAK======================================
-
-%
-%expression_statement
-%	: expression SEMICOLON
-%		-> ^(EXPRESSION_STATEMENT expression)
-%	;
-%
-
-%
-
-%
-%expr_read
-%	: READ^ LPAREN! identifier (COMMA! identifier)* RPAREN!
-%	;
-%
-%expr_print
-%	: PRINT^ LPAREN! expression (COMMA! expression)* RPAREN!
-%	;
-%
-%expr_if
-%	: IF^ compoundexpression THEN compoundexpression (ELSE compoundexpression)? FI!
-%	;
-%
-%expr_while
-%	: WHILE^ compoundexpression DO compoundexpression OD
-%	;
-%
-%expr_closedcompound
-%	: LCURLY compoundexpression RCURLY
-%	;
-%
-%expr_closed
-%	: LPAREN! expression RPAREN!
-%	;
-
 
 \newpage
 \section{Vertaalregels}
@@ -490,10 +513,68 @@ ging van TAM-instructies. Vertaalregels zijn de ‘code templates’ van hoofdst
 
 \newpage
 \section{Beschrijving van Java programmatuur}
-Beknopte bespreking van de extra Java klassen die
-u gedefinieerd heeft voor uw compiler (b.v. symbol table management, type checking, code
-generatie, error handling, etc.). Geef ook aan welke informatie in de AST-nodes opgeslagen
-wordt.
+%Beknopte bespreking van de extra Java klassen die
+%u gedefinieerd heeft voor uw compiler (b.v. symbol table management, type checking, code
+%generatie, error handling, etc.). Geef ook aan welke informatie in de AST-nodes opgeslagen
+%wordt.
+%
+%
+%CheckerEntry.java    SELMA.java
+%CompilerEntry.java   SELMATreeAdaptor.java
+%IdEntry.java         SELMATree.java
+%SELMAException.java  SymbolTable.java
+\subsection{main - SELMA}
+SELMA.java is het main-programma. Je kunt een aantal opties en een SELMA-sourcecodefile meegeven.
+Hierna zal SELMA desbetreffende file parsen en compileren. De opties die mogelijk zijn zijn:
+\begin{itemize}
+\item -ast Er zal een ast-diagram naar de stdOut worden geprint van de source-code.
+\item -dot Er zal een dot-diagram naar de stdOut worden geprint van de source-code.
+\item -no\_checker De source-code wordt geparsed maar niet gechecked.
+\item -code\_generator De source-code zal worden gecompiled
+\end{itemize}
+De sourcecode zal de volgende stappen doorlopen: \\
+\begin{tabbing}
+\hspace{5em}\=\hspace{5em}\=\hspace{7em}\=\hspace{5em}\=\hspace{10em}\=\kill
+Lexer \>  Parser \> -no\_checker 	\>   		\> -ast \>  Ast-diagram \\
+Lexer \>  Parser \> -no\_checker 	\>   		\> -dot \>  Dot-diagram \\
+Lexer \>  Parser \>  				\>  Checker \> -ast \>  Ast-diagram \\
+Lexer \>  Parser \>  				\>  Checker \> -dot \>  Dot-diagram \\
+Lexer \>  Parser \>  				\>  Checker \> -code\_generator \>  Code 
+\end{tabbing} 
+Alle resultaten zullen altijd naar de stdOut worden geprint.
+
+\subsection{SELMAException}
+Als er wat fout gaat in bijvoorbeeld de checker dan zal er een exception worden gegooid. Deze exception is een SELMAException. Aan de exception wordt de node meegegeven waar de checker op dat moment mee bezig is. En de toString()-functie van SELMAException zal dat dan ook mooi formatten in de vorm van "(regelnummer:columnnummer) Errormessage", toch wel fijn als je moet debuggen. 
+
+\subsection{SELMATreeAdaptor}
+Deze TreeAdaptor heeft SELMATree als nodes, in plaats van een normale Tree.
+
+\subsection{SELMATree}
+SELMATree is een uitbreiding op de normale tree. En kan een aantal extra dingen bijhouden, namelijk of een expressie constant is of variabel, wat later handig is voor optimizing. En wat het type is van de expressie, dat is zeer handig voor de checker.
+Daarvoor heeft SELMATree een paar extra attributen, zijnde:
+\lstinputlisting[style=JAVA,linerange={26-30}]{../src/SELMA/SELMATree.java}
+En verder kent SELMATree nog drie functies om mooi te kunnen printen:
+\lstinputlisting[style=JAVA,linerange={32-32,36-36,68-68}]{../src/SELMA/SELMATree.java}
+
+\subsection{SymbolTable}
+De symboltable houdt al onze variabelen en constanten bij. Ook kun je in de symboltable scopes aanmaken, om bijvoorbeeld variabelen binnen een compoundexpressie te kunnen declareren. De dataopslag van de symboltable geschiedt middels een Map waarin een string aan een stack van IDEntries wordt gekoppeld. De string verwijst naar de naam van de variabele of constante. De stack bevat meerdere declaraties van die variabele met die naam in verschillende scopes. Zodat het mogelijk is de zelfde naam tweemaal te gebruiken, mits ze in een andere scope gebruikt worden.\\
+\\
+De symboltable kent een aantal functies, de belangrijkste zijn:
+\lstinputlisting[style=JAVA,linerange={28-32,36-42,58-66,88-94}]{../src/SELMA/SymbolTable.java}
+
+\subsubsection{SymbolTableException}
+SymbolTableException is er om fouten in de symboltable aan te geven. Deze fouten zullen vergelijkbaar worden geformat als die van SELMAException, namelijk "(line:column) ErrorMsg.
+
+\subsection{IDEntry}
+De symboltable bevat voor elke variabele of constante een IDEntry. Een IDEntry bevat de scopelevel van desbetreffende declaratie. Wij gebruiken in onze code echter een tweetal klasses die ge-extend zijn op IDEntry; CheckerEntry en CompilerEntry.
+
+\subsection{CheckerEntry}
+De CheckerEntry wordt gebruikt in de Checker. Een checkerEntry verschilt van een IDEntry op het punt dat een checkerEntry twee extra waardes heeft om bij te houden wat het type is van de variabele of constante (int,bool of char). De tweede waarde is om bij te houden of we met een constante of een variabele te maken hebben.
+\lstinputlisting[style=JAVA,linerange={7-8}]{../src/SELMA/CheckerEntry.java}
+
+\subsection{CompilerEntry}
+De compilerEntry is weer een uitbreiding op de CheckerEntry. Voor de compiler is het namelijk noodzakelijk om te weten op welk adres in de te genereren code de variabele staat. Dit wordt bijgehouden door:
+\lstinputlisting[style=JAVA,linerange={7-7}]{../src/SELMA/CompilerEntry.java}
 
 \newpage
 \section{Testplan en -resultaten}
